--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
-<!DOCTYPE html>
+َ<!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>البحث عن متبرعي الدم</title>
     <style>
-        body { font-family: Arial, sans-serif; direction: rtl; text-align: right; }
-        .container { width: 80%; margin: auto; }
-        label, select, input { display: block; margin-top: 10px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            direction: rtl; 
+            text-align: right;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        .container { 
+            width: 80%; 
+            margin: auto; 
+            background: #fff; 
+            padding: 20px; 
+            border-radius: 10px; 
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        label, select, input { 
+            display: block; 
+            margin-top: 10px; 
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            margin-top: 15px;
+            background-color: #dc3545;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #c82333;
+        }
     </style>
 </head>
 <body>
@@ -32,7 +65,7 @@
         
         <h3>تسجيل كمتبرع</h3>
         <label for="donor-name">الاسم:</label>
-        <input type="text" id="donor-name">
+        <input type="text" id="donor-name" placeholder="أدخل اسمك">
 
         <label for="donor-blood-type">فصيلة الدم:</label>
         <select id="donor-blood-type">
@@ -67,37 +100,5 @@
         
         <button onclick="registerDonor()">تسجيل</button>
     </div>
-
-    <script>
-        const statesData = {
-            "dz": {
-                "أدرار": ["أدرار", "تيميمون", "رقان", "برج باجي مختار", "أولف", "تسابيت", "زاوية كنتة"],
-                "الشلف": ["الشلف", "تنيس", "بوقادير", "وادي الفضة", "المرسى", "الهرانفة", "أولاد فارس"],
-                "الأغواط": ["الأغواط", "أفلو", "حاسي الرمل", "قلتة سيدي سعد", "عين ماضي", "تاجموت", "سيدي مخلوف"],
-                "أم البواقي": ["أم البواقي", "عين البيضاء", "عين مليلة", "سيقوس", "الضلعة", "العامرية", "الزرق"],
-                "باتنة": ["باتنة", "عين التوتة", "آريس", "مروانة", "بريكة", "سريانة", "تكوت"],
-                "بجاية": ["بجاية", "أميزور", "سيدي عيش", "تازملت", "خراطة", "درقينة", "القصر"],
-                "بسكرة": ["بسكرة", "أورلال", "زريبة الوادي", "القنطرة", "أولاد جلال", "فوغالة", "مشونش"],
-                "بشار": ["بشار", "القنادسة", "تبلبالة", "بني ونيف", "العبادلة", "كرزاز", "موغل"],
-                "تلمسان": ["تلمسان", "مغنية", "الغزوات", "ندرومة", "سبدو", "حناية", "الرمشي"],
-                "الجلفة": ["الجلفة", "عين وسارة", "حاسي بحبح", "مسعد", "البيرين", "دار الشيوخ", "الإدريسية", "فيض البطمة"]
-            },
-            "eg": {
-                "القاهرة": ["مدينة نصر", "المعادي", "الزمالك", "حلوان", "شبرا", "التجمع الخامس"],
-                "الإسكندرية": ["سموحة", "العجمي", "محرم بك", "المنتزه", "برج العرب"],
-                "الجيزة": ["الدقي", "المهندسين", "6 أكتوبر", "الشيخ زايد", "العياط"]
-            },
-            "ma": {
-                "الدار البيضاء": ["عين السبع", "المعاريف", "الحي الحسني", "البرنوصي", "بوسكورة"],
-                "الرباط": ["أكدال", "حسان", "يعقوب المنصور", "السويسي", "تمارة"],
-                "مراكش": ["المدينة", "كليز", "المنارة", "سيدي يوسف بن علي", "النخيل"]
-            },
-            "sa": {
-                "الرياض": ["الملز", "العليا", "السويدي", "النخيل", "الدرعية", "الشفا"],
-                "جدة": ["التحلية", "الكورنيش", "البغدادية", "الحمراء", "الصفا"],
-                "الدمام": ["الشاطئ", "العزيزية", "الحمراء", "الريان", "الروضة"]
-            }
-        };
-    </script>
 </body>
 </html>
